--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "easy-firebase-ts",
+  "name": "@acwilsondev/easy-firebase-ts",
   "version": "1.0.0",
   "description": "A TypeScript library that simplifies Firebase usage with type-safe approaches",
   "main": "dist/index.js",
@@ -8,6 +8,9 @@
     "build": "tsc",
     "test": "jest",
     "lint": "eslint \"src/**/*.ts\"",
+    "lint:fix": "eslint \"src/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,json,md}\"",
     "clean": "rimraf dist",
     "prepublishOnly": "npm run clean && npm run build"
   },
@@ -15,19 +18,30 @@
     "type": "git",
     "url": "git+https://github.com/acwilsondev/easy-firebase-ts.git"
   },
-  "keywords": ["firebase", "typescript", "firestore", "type-safe"],
+  "keywords": [
+    "firebase",
+    "typescript",
+    "firestore",
+    "type-safe"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "bugs": {
     "url": "https://github.com/acwilsondev/easy-firebase-ts/issues"
   },
   "homepage": "https://github.com/acwilsondev/easy-firebase-ts#readme",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "engines": {
     "node": ">=14"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "^4.10.0",
     "firebase-admin": "^11.10.1"
   },
   "peerDependencies": {
@@ -39,7 +53,10 @@
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.47.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.6.4",
+    "prettier": "^3.5.3",
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
